# pen-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/alkanes_cli/: CMakeLists.txt  main.cpp
apps/az_data_cli/: CMakeLists.txt  main.cpp  skia_utils.cpp  utils.cpp  utils.h
apps/az_test_chem/: CMakeLists.txt  main.cpp  test_io.cpp
apps/az_test_core/: CMakeLists.txt  test_cmp_with_opencv.cpp
apps/az_test_data/: CMakeLists.txt  group_all_keys.cpp  skia_utils.cpp  skia_utils.h  test_gsm8k.cpp  test_minicouch.cpp  test_mol_generator.cpp  test_read_couch.cpp  test_read_crohme23.cpp  test_read_rcsb.cpp  test_tex_generator.cpp  utils.cpp
apps/az_test_js/: CMakeLists.txt  test_multithreading.cpp  test_qjs.cpp  test_single_thread.cpp  utils.cpp  utils.h
apps/az_test_math/: CMakeLists.txt  test_alkane_isomer.cpp  test_operation_draft.cpp
apps/az_test_media/: CMakeLists.txt  main.cpp  test_video.cpp
apps/az_test_pen/: CMakeLists.txt  test_penstroke.cpp
apps/az_test_spdstream/: CMakeLists.txt  main.cpp
apps/az_test_svg/: CMakeLists.txt  test_path.cpp  test_transfrom.cpp
apps/az_test_tex/: CMakeLists.txt  main.cpp  test_graph.cpp  test_json.cpp
cmake/: build-abseil.cmake  build-agg.cmake  build-arrow.cmake  build-benchmark.cmake  build-boost.cmake  build-cairo.cmake  build-cppcoro.cmake  build-cpufeatures.cmake  build-eigen.cmake  build-flatbuffers.cmake  build-indigo.cmake  build-libxml2.cmake  build-nanosvg.cmake  build-ncnn.cmake  build-opencv.cmake  build-openssl.cmake  build-protobuf.cmake  build-quickjs.cmake  build-rdkit.cmake  build-skia.cmake  build-snappy.cmake  build-spdlog.cmake  build-svgpp.cmake  build-taskflow.cmake  build-thrift.cmake  cmake-utils.cmake  project-config.cmake
docs/scripts/: adb-run-file.sh  ffmpeg_i2v.sh  ffmpeg_v2last.sh  ffmpeg_v2v.sh
include/az/: init_openbabel.h  init_qt.h  spdstream.h
include/az/chem/: atom.h  bond.h  config.h  mol_graph.h  utils.h
include/az/core/: config.h  encoding.h  fraction.h  geometry_def.h  init_spdlog.h  json_graph.h  utils.h
include/az/data/: config.h  couch_item.h  couch_reader.h  gsm8k_reader.h  im2latex_reader.h  inkml_item.h  inkml_reader.h  makemeahanzi_reader.h  pen_bond_factory.h  rcsb_reader.h  structural_formula_item.h  synthesis_tex_generator.h  unicode_shape.h
include/az/js/: config.h  qjs_wrapper.h
include/az/math/: alkane_isomer.h  alkane_isomer_counter.h  config.h  multiply_draft.h
include/az/media/: config.h  data_output.h  skia_utils.h
include/az/pen/: config.h  pen_char.h  pen_context.h  pen_font.h  pen_graph.h  pen_item_info.h  pen_op.h  pen_path.h  pen_string.h  pen_stroke.h
include/az/svg/: config.h  path.h  path_parser.h  transform_parser.h
include/az/tex/: api.h  config.h  tex_graph.h
lib/: CMakeLists.txt
lib/az_chem/: CMakeLists.txt  atom.cpp  bond.cpp  config.cpp  coordgenlibs_impl.cpp  coordgenlibs_impl.h  graph_impl.cpp  graph_impl.h  mol_graph.cpp  openbabel_impl.cpp  openbabel_impl.h  rdkit_impl.cpp  rdkit_impl.h  utils.cpp
lib/az_core/: CMakeLists.txt  config.cpp  encoding.cpp  geometry_def.cpp  geometry_def_boost.cpp  init_spdlog.cpp  utils.cpp
lib/az_data/: CMakeLists.txt  config.cpp  couch_item.cpp  couch_raw_item.cpp  couch_raw_item.h  couch_reader.cpp  data_crohme2023.cpp  data_mathjax.cpp  data_unicode_similarity.cpp  gsm8k_reader.cpp  im2latex_reader.cpp  inkml_item.cpp  inkml_raw_item.cpp  inkml_raw_item.h  inkml_reader.cpp  makemeahanzi_reader.cpp  mathjax_svg_path_reader.cpp  pen_bond_factory.cpp  rcsb_reader.cpp  structural_formula_item.cpp  synthesis_tex_generator.cpp  unicode_shape.cpp
lib/az_init_openbabel/: CMakeLists.txt  impl.cpp
lib/az_init_qt/: CMakeLists.txt  impl.cpp
lib/az_js/: .gitignore  CMakeLists.txt  config.cpp  qjs_wrapper.cpp
lib/az_math/: CMakeLists.txt  alkane_isomer.cpp  alkane_isomer_counter.cpp  config.cpp  multiply_draft.cpp
lib/az_media/: CMakeLists.txt  config.cpp  image_data_output.cpp  skia_utils.cpp  video_data_output.cpp
lib/az_pen/: CMakeLists.txt  config.cpp  pen_char.cpp  pen_context.cpp  pen_font.cpp  pen_graph.cpp  pen_op.cpp  pen_path.cpp  pen_string.cpp  pen_stroke.cpp
lib/az_spdstream/: CMakeLists.txt  spdstream.cpp
lib/az_svg/: CMakeLists.txt  path.cpp  path_parser.cpp  transform_parser.cpp
lib/az_svg/svgpp/path_parser/: path.cpp  path.h  path_context.cpp  path_context.h  path_op.cpp  path_op.h
lib/az_svg/svgpp/transform_parser/: transform.cpp  transform.h  transform_events_policy.cpp  transform_events_policy.h
lib/az_tex/: CMakeLists.txt  config.cpp  graph_impl.cpp  graph_impl.h  json_to_graph.cpp  mathjax_json_io.cpp  mathjax_json_io.h  rapidjson_archiver.cpp  rapidjson_archiver.h  tex_graph.cpp  tex_to_graph.cpp  tex_to_json.cpp  tex_to_svg.cpp  tex_to_svg_batch.cpp
python/: .gitignore  README.md  requirements-dev.txt  setup.py
python/instruct_pen/: requirements.txt  visualize_dataset.py
python/instruct_pen/diffusion/: README.md  infer_text_to_image_lora_sdxl.py  (+1 more)
python/lib/: CMakeLists.txt
python/lib/pen_simulator/: CMakeLists.txt  main.cpp  skia_utils.cpp  skia_utils.h
python/pen_simulator/: __init__.py  __init__.pyi
python/scripts/: im2latex2az.py
shadow_build/: CMakeLists.txt
www/: .npmrc  lerna.json  package.json  pnpm-workspace.yaml
www/patches/: mathjax-full@3.2.2.patch
(+46 files in other folders)
