if (XGD_USE_QT)
    add_subdirectory(az_data_cli)
endif ()
add_subdirectory(az_test_chem)
add_subdirectory(az_test_core)
add_subdirectory(az_test_data)
add_subdirectory(az_test_js)
add_subdirectory(az_test_math)
add_subdirectory(az_test_media)
add_subdirectory(az_test_pen)
add_subdirectory(az_test_svg)
add_subdirectory(az_test_tex)
add_subdirectory(az_test_spdstream)
